# miniSerialMonitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  appLogo.qrc  csv_save.cpp  csv_save.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  miniSerialMonitor.desktop  serial.cpp  serial.h  settings.cpp  settings.ui  version.h
